stop scrollbar from taking up space on homescreen

--- a/src/app/homescreen/homescreen.component.scss
+++ b/src/app/homescreen/homescreen.component.scss
@@ -107,6 +107,7 @@ $sidenav-expanded-width: 250px;
 
 .content {
   overflow-y: auto;
+  scrollbar-gutter: stable both-edges;
   height: calc(100vh - 64px);
   padding: 32px 64px;
 }
